# wrap-iq

./: .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.railway  Dockerfile.worker.railway  pyproject.toml  railway-worker.toml  railway.toml  railway.worker.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_seed_default_plan.py  003_add_notifications_table.py  004_add_kanban_stages_table.py  005_add_project_data_models.py  006_add_estimates_invoices_payments.py  007_add_onboarding_models.py  008_add_missing_tables.py  009_add_missing_fk_indexes.py  010_widen_refresh_token_column.py  011_add_full_name_to_users.py  012_add_checklist_to_work_orders.py  013_create_time_logs_table.py  014_add_photo_fields_to_file_uploads.py  014_create_renders_table.py  015_create_renders_table.py  016_seed_superadmin_organization.py  017_lowercase_kanban_system_status.py  018_add_paint_color_and_file_upload_fields.py  018_add_paint_color_to_vehicles.py  019_time_tracking_estimates.py  06a40acd1a7c_merge_migration_heads.py  09c2a95d9019_merge_heads.py  1ade3e86e611_add_audit_logs_table.py  41aa2436b506_add_message_templates_and_message_logs_.py  (+4 more)
backend/app/: config.py  db.py  logging_config.py  main.py  worker.py
backend/app/auth/: jwt.py  (+3 more)
backend/tests/: conftest.py  test_api_keys.py  test_integration_renders.py  test_logging_config.py  test_main_lifespan.py  test_rate_limit.py  test_renders.py  test_subscriptions.py  test_worker.py
(+430 files in other folders)
